--- a/autobiography.html
+++ b/autobiography.html
@@ -14,10 +14,11 @@
 
   <link rel="stylesheet" href="./src/styles/hamburgers.css">
   <link rel="stylesheet" href="./dist/main.css">
-  <title>way-to-health</title>
+  <title>Blog-project</title>
 </head>
 
 <body>
+
   <div class="header-section">
     <div class="content">
       <ul class="contact-info">
@@ -229,79 +230,69 @@
       <div class="breadcrumbs-wrap">
         <a class="breadcrumbs-link" href="./index.html">Головна</a>
         <div class="breadcrumbs-wrap__seperator">\</div>
-        <a class="breadcrumbs-link" href="./im-Ukranian.html">Контакти</a>
+        <a class="breadcrumbs-link" href="./blog.html">Автобіографія</a>
       </div>
     </div>
   </div>
 
   <main>
-    <section class="contacts">
+    <section class="autobiography">
       <div class="container">
-        <h1 class="contacts__title">Контакти</h1>
-        <ul class="contacts-list">
-          <h3 class="contacts-list__subtitle">Наші контакти:</h3>
-          <div class="contacts-list__content">
-            <li class="contacts-list__item">
-              <div class="contacts-list__item--content">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <path
-                    d="M20.6981 15.1997L16.2713 13.2187C16.0996 13.1444 15.9122 13.1141 15.726 13.1305C15.5397 13.1469 15.3604 13.2094 15.2044 13.3125C15.1919 13.3204 15.18 13.3291 15.1688 13.3387L12.8438 15.3206C12.792 15.3522 12.7333 15.3705 12.6728 15.3739C12.6123 15.3773 12.5519 15.3658 12.4969 15.3403C10.9744 14.6053 9.39845 13.0415 8.66345 11.5368C8.63745 11.4823 8.62538 11.4221 8.62832 11.3618C8.63127 11.3014 8.64914 11.2427 8.68032 11.1909L10.6678 8.82747C10.6772 8.81622 10.6856 8.80403 10.6941 8.79185C10.7968 8.63603 10.8592 8.45711 10.8755 8.27119C10.8919 8.08528 10.8618 7.89821 10.7878 7.72685L8.80314 3.30747C8.70732 3.08364 8.54148 2.89693 8.33051 2.77539C8.11954 2.65384 7.87483 2.60402 7.63314 2.63341C6.45336 2.78896 5.37054 3.36865 4.58694 4.26422C3.80334 5.15979 3.37254 6.30998 3.37501 7.49997C3.37501 14.7375 9.26251 20.625 16.5 20.625C17.69 20.6274 18.8402 20.1966 19.7358 19.413C20.6313 18.6294 21.211 17.5466 21.3666 16.3668C21.3957 16.1263 21.3464 15.8827 21.226 15.6724C21.1056 15.462 20.9204 15.2963 20.6981 15.1997ZM20.625 16.2731C20.4926 17.2722 20.0009 18.1889 19.2417 18.8519C18.4825 19.5148 17.5079 19.8785 16.5 19.875C9.67689 19.875 4.12501 14.3231 4.12501 7.49997C4.12152 6.49211 4.48523 5.51747 5.14813 4.75829C5.81103 3.99911 6.72775 3.50736 7.72689 3.37497C7.74187 3.37404 7.7569 3.37404 7.77189 3.37497C7.84587 3.3756 7.91801 3.3981 7.97923 3.43964C8.04045 3.48118 8.08802 3.5399 8.11595 3.60841L10.095 8.02778C10.1181 8.0818 10.1282 8.14048 10.1244 8.1991C10.1207 8.25772 10.1032 8.31465 10.0734 8.36528L8.08689 10.7278C8.07751 10.74 8.06814 10.7512 8.0597 10.7643C7.95386 10.9262 7.89153 11.1126 7.87872 11.3055C7.86591 11.4985 7.90306 11.6915 7.98657 11.8659C8.80126 13.5337 10.4813 15.2015 12.1678 16.0162C12.3434 16.0992 12.5375 16.1353 12.7312 16.121C12.9249 16.1067 13.1116 16.0425 13.2731 15.9347L13.3078 15.9084L15.6356 13.9284C15.6854 13.898 15.7417 13.8798 15.7999 13.8754C15.8581 13.871 15.9165 13.8805 15.9703 13.9031L20.3963 15.8868C20.471 15.9179 20.5336 15.9723 20.5748 16.042C20.616 16.1116 20.6336 16.1927 20.625 16.2731Z"
-                    fill="#080808" />
-                </svg>
+        <h1 class="autobiography__title">Автобіографія</h1>
+        <p class="autobiography__descr">Я, Німцович Ємілія Сергіївна народилася 23 жовтня 1962 р. в селі Петрашівка
+          Віньковецького району Хмельницької обл. За національністю – українка.
+        </p>
+        <div class="autobiography-wrap">
+          <img src="./src/img/autobiography.jpg" alt="">
+        </div>
 
-                <p>Телефон 1:</p>
-                <span> 0972189913 – Ємілія Німцович (керівник)</span>
-              </div>
+        <ul class="autobiography-list">
+          <div class="autobiography-content">
+            <li class="autobiography-list-item">
+              <p class="autobiography-list-item__descr">Народилася в сім’ї селян. Мати Німцович Марія Михайлівна
+                працювала
+                в рільничій бригаді. Батько Німцович
+                Сергій Сільвестрович працював в будівельній бригаді. В сім’ї крім мене було ще троє дітей.В даний час
+                проживаю за адресою 29000, Хмельницька область, м. Хмельницький, провулок Нагірний 3-Б, будинок 12.В
+                1980
+                р. закінчила Петрашівську середню школу.В 1981 р. закінчила Прушковецьке СПТУ за фахом «Бухгалтерський
+                облік».</p>
             </li>
-            <li class="contacts-list__item">
-              <div class="contacts-list__item--content">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <path
-                    d="M20.6981 15.1997L16.2713 13.2187C16.0996 13.1444 15.9122 13.1141 15.726 13.1305C15.5397 13.1469 15.3604 13.2094 15.2044 13.3125C15.1919 13.3204 15.18 13.3291 15.1688 13.3387L12.8438 15.3206C12.792 15.3522 12.7333 15.3705 12.6728 15.3739C12.6123 15.3773 12.5519 15.3658 12.4969 15.3403C10.9744 14.6053 9.39845 13.0415 8.66345 11.5368C8.63745 11.4823 8.62538 11.4221 8.62832 11.3618C8.63127 11.3014 8.64914 11.2427 8.68032 11.1909L10.6678 8.82747C10.6772 8.81622 10.6856 8.80403 10.6941 8.79185C10.7968 8.63603 10.8592 8.45711 10.8755 8.27119C10.8919 8.08528 10.8618 7.89821 10.7878 7.72685L8.80314 3.30747C8.70732 3.08364 8.54148 2.89693 8.33051 2.77539C8.11954 2.65384 7.87483 2.60402 7.63314 2.63341C6.45336 2.78896 5.37054 3.36865 4.58694 4.26422C3.80334 5.15979 3.37254 6.30998 3.37501 7.49997C3.37501 14.7375 9.26251 20.625 16.5 20.625C17.69 20.6274 18.8402 20.1966 19.7358 19.413C20.6313 18.6294 21.211 17.5466 21.3666 16.3668C21.3957 16.1263 21.3464 15.8827 21.226 15.6724C21.1056 15.462 20.9204 15.2963 20.6981 15.1997ZM20.625 16.2731C20.4926 17.2722 20.0009 18.1889 19.2417 18.8519C18.4825 19.5148 17.5079 19.8785 16.5 19.875C9.67689 19.875 4.12501 14.3231 4.12501 7.49997C4.12152 6.49211 4.48523 5.51747 5.14813 4.75829C5.81103 3.99911 6.72775 3.50736 7.72689 3.37497C7.74187 3.37404 7.7569 3.37404 7.77189 3.37497C7.84587 3.3756 7.91801 3.3981 7.97923 3.43964C8.04045 3.48118 8.08802 3.5399 8.11595 3.60841L10.095 8.02778C10.1181 8.0818 10.1282 8.14048 10.1244 8.1991C10.1207 8.25772 10.1032 8.31465 10.0734 8.36528L8.08689 10.7278C8.07751 10.74 8.06814 10.7512 8.0597 10.7643C7.95386 10.9262 7.89153 11.1126 7.87872 11.3055C7.86591 11.4985 7.90306 11.6915 7.98657 11.8659C8.80126 13.5337 10.4813 15.2015 12.1678 16.0162C12.3434 16.0992 12.5375 16.1353 12.7312 16.121C12.9249 16.1067 13.1116 16.0425 13.2731 15.9347L13.3078 15.9084L15.6356 13.9284C15.6854 13.898 15.7417 13.8798 15.7999 13.8754C15.8581 13.871 15.9165 13.8805 15.9703 13.9031L20.3963 15.8868C20.471 15.9179 20.5336 15.9723 20.5748 16.042C20.616 16.1116 20.6336 16.1927 20.625 16.2731Z"
-                    fill="#080808" />
-                </svg>
-                <p>Телефон 2: </p>
-                <span>0980672570 – Інна Бойчук (помічник)</span>
-              </div>
+            <li class="autobiography-list-item">
+              <p class="autobiography-list-item__descr">Від 1982 до 1985 р. навчалася у Хмельницькому медичному
+                училищі.Від 1985 до 1997 р. працювала медсестрою
+                в Деражнянській ЦРЛ .В 1998 р. отримала ліцензію і працювала як приватний підприємець. Ліцензія від
+                02.10.1998р. по 02.102003р. №37375, господарська діяльність.В 2007 р. отримала ліцензію Міністерства
+                охорони здоров’я, заснувала ТОВ «Вільний рух».</p>
             </li>
-            <li class="contacts-list__item">
-              <div class="contacts-list__item--content">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <path
-                    d="M4.615 19C4.155 19 3.771 18.846 3.463 18.538C3.15433 18.2293 3 17.845 3 17.385V6.615C3 6.155 3.15433 5.771 3.463 5.463C3.771 5.15433 4.155 5 4.615 5H19.385C19.845 5 20.229 5.15433 20.537 5.463C20.8457 5.771 21 6.155 21 6.615V17.385C21 17.845 20.846 18.229 20.538 18.537C20.2293 18.8457 19.845 19 19.385 19H4.615ZM12 12.115L4 6.885V17.385C4 17.5643 4.05767 17.7117 4.173 17.827C4.28833 17.9423 4.43567 18 4.615 18H19.385C19.5643 18 19.7117 17.9423 19.827 17.827C19.9423 17.7117 20 17.5643 20 17.385V6.885L12 12.115ZM12 11L19.692 6H4.308L12 11ZM4 6.885V6V17.385C4 17.5643 4.05767 17.7117 4.173 17.827C4.28833 17.9423 4.43567 18 4.615 18H4V6.885Z"
-                    fill="#080808" />
-                </svg>
-                <p>E-пошта: </p>
-                <span>admin@way-to-health.com.ua</span>
-              </div>
+            <li class="autobiography-list-item">
+              <p class="autobiography-list-item__descr">В 2014 р. заснувала Г. О. В. О. «Шлях до здорв’я», працювала
+                керівником, допомагала хворим у відновлені
+                здоров’я.Від 10.02.2017 р. в лікарні с.м.т. Антоніни взяла в оренду 500 кв. м. для реабілітаційного
+                відділення на 12 ліжок для хворих із порушеннями опорно-рухового апарату. Хворих багато. Тому для
+                покращення стану хворих та відновлення в короткий термін здоров’я розробила план реабілітації.</p>
             </li>
-            <li class="contacts-list__item">
-              <div class="contacts-list__item--content">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <path
-                    d="M11.9997 1.92859C14.2162 1.92859 16.3418 2.80907 17.9091 4.37634C19.4764 5.94361 20.3569 8.06928 20.3569 10.2857C20.3569 13.8172 17.8754 17.6657 12.9769 21.8726C12.7045 22.1066 12.3572 22.2351 11.9981 22.2348C11.639 22.2345 11.292 22.1053 11.02 21.8709L10.696 21.5897C6.01429 17.4926 3.64258 13.7383 3.64258 10.2857C3.64258 8.06928 4.52306 5.94361 6.09033 4.37634C7.6576 2.80907 9.78327 1.92859 11.9997 1.92859ZM11.9997 3.2143C10.1243 3.2143 8.32562 3.95933 6.99947 5.28548C5.67332 6.61163 4.92829 8.41027 4.92829 10.2857C4.92829 13.2874 7.11229 16.746 11.5403 20.6203L11.86 20.8972C11.8989 20.9306 11.9485 20.949 11.9997 20.949C12.051 20.949 12.1006 20.9306 12.1394 20.8972C16.7817 16.9097 19.0711 13.3586 19.0711 10.2857C19.0711 9.3571 18.8882 8.43756 18.5329 7.57961C18.1775 6.72167 17.6566 5.94212 17 5.28548C16.3433 4.62883 15.5638 4.10796 14.7058 3.75258C13.8479 3.39721 12.9284 3.2143 11.9997 3.2143ZM11.9997 7.07145C12.8522 7.07145 13.6698 7.41009 14.2726 8.01289C14.8754 8.61568 15.214 9.43325 15.214 10.2857C15.214 11.1382 14.8754 11.9558 14.2726 12.5586C13.6698 13.1614 12.8522 13.5 11.9997 13.5C11.1472 13.5 10.3297 13.1614 9.72688 12.5586C9.12408 11.9558 8.78543 11.1382 8.78543 10.2857C8.78543 9.43325 9.12408 8.61568 9.72688 8.01289C10.3297 7.41009 11.1472 7.07145 11.9997 7.07145ZM11.9997 8.35716C11.4882 8.35716 10.9977 8.56035 10.636 8.92203C10.2743 9.2837 10.0711 9.77424 10.0711 10.2857C10.0711 10.7972 10.2743 11.2878 10.636 11.6494C10.9977 12.0111 11.4882 12.2143 11.9997 12.2143C12.5112 12.2143 13.0017 12.0111 13.3634 11.6494C13.7251 11.2878 13.9283 10.7972 13.9283 10.2857C13.9283 9.77424 13.7251 9.2837 13.3634 8.92203C13.0017 8.56035 12.5112 8.35716 11.9997 8.35716Z"
-                    fill="#080808" />
-                </svg>
-                <p>Адреса: </p>
-                <span>м. Хмельницький, вул. Володимирська 109, 1 поверх, кабінет 3</span>
-              </div>
+            <li class="autobiography-list-item">
+              <p class="autobiography-list-item__descr">Через високу вартість реабілітації та відсутність фінансування
+                хворі переривають лікування. Зважаючи на
+                бажання хворих жити та працювати, складність в лікуванні таких хвороб є потреба у додатковому
+                дослідженні
+                реабілітації, покращенні та подальшого впровадження по Україні. В результаті буде менше людей з
+                обмеженою
+                функціональною можливістю і тому більше працюючих. Так можна розробити план переходу медицини в страхову
+                медицину та розробити план лікування та реабілітації за рахунок страхової медицини.</p>
+            </li>
+            <li class="autobiography-list-item">
+              <p class="autobiography-list-item__descr">Прошу державних керівників та депутатів допомоги в розвитку
+                такої
+                медичної реабілітації. Прошу приїхати
+                або прийняти мене для представлення пропозицій на новий розвиток медицини та реабілітації по усіх
+                нозологіях від нуля до нескінченності.</p>
             </li>
           </div>
         </ul>
-
       </div>
     </section>
-
-    <section class="maps">
-
-      <div class="container">
-
-        <div><iframe width="844px" height="628" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"
-            src="https://maps.google.com/maps?width=844&amp;height=628&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a
-              href="https://www.maps.ie/population/"></a></iframe></div>
-      </div>
-    </section>
-
 
   </main>
 
@@ -311,10 +302,10 @@
         <li class="footer-nav-item">
           <address class="footer-nav-item__addres">
             <pre>
-          м. Хмельницький,
-          вул. Володимирська 109,
-          1 поверх, кабінет 3
-        </pre>
+            м. Хмельницький,
+            вул. Володимирська 109,
+            1 поверх, кабінет 3
+          </pre>
           </address>
         </li>
         <li class="footer-nav-item">
@@ -371,6 +362,7 @@
           </ul>
         </li>
       </ul>
+
 
       <div class="copyright">
         <p>© 2014-2023, м. Хмельницький, ГО “Шлях до Здоров’я”</p>
