--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             <p class="activity-list-descr">Німцович Ємілія Сергіївна в 2014 р. заснувала Г. О. В. О. «Шлях до здорв’я»,
               працювала
               керівником, допомагала хворим у відновлені здоров’я.</p>
-            <span><a class="btn btn-more" href="">Дізнатись більше</a></span>
+            <span><a class="btn btn-more" href="/autobiography.html">Дізнатись більше</a></span>
           </li>
           <li class="activity__list-item">
             <img src="./src/img/activity.jpg" alt="">
