--- a/public-offer.html
+++ b/public-offer.html
@@ -79,10 +79,10 @@
         <a class="logo-link" href="/">
           <img src="./src/img/logo.png" alt="logo">
 
-          <span>
+          <p>
             <h3 class="logo-title">Громадська організація</h3>
             <h2 class="logo-subtitle">Шлях до Здоровʼя</h2>
-          </span>
+          </p>
         </a>
 
       </div>
@@ -99,7 +99,7 @@
 
       <div class="lang">
         <a class="lang-localize" href="en">en</a>
-        <span class="lang-separator"></span>
+        <p class="lang-separator"></p>
         <a class="lang-localize" href="ua">ua</a>
       </div>
 
@@ -114,9 +114,9 @@
       </div>
 
       <button class="hamburger hamburger--spring" id="hamburger" type="button">
-        <span class="hamburger-box">
-          <span class="hamburger-inner"></span>
-        </span>
+        <p class="hamburger-box">
+        <p class="hamburger-inner"></p>
+        </p>
       </button>
 
       <!-- mobile-menu  -->
@@ -170,7 +170,7 @@
       </ul>
 
       <div class="mobile-social-icons">
-        <span>Соцмережі</span>
+        <p>Соцмережі</p>
         <ul class="social-icons-list">
           <li class="social-icons-list__item">
             <a href="#facebook">
@@ -254,7 +254,7 @@
         </li>
         <li class="public-offer-list-item">
           <h2>1.Терміни та визначення:</h2>
-          <span class="pawn">
+          <p class="pawn">
             Акцепт – повне і безумовне прийняття Оферти шляхом вчинення дій щодо здійснення грошового переказу за
             допомогою платіжних форм та засобів, розміщених на Сайті, а також шляхом перерахування грошових коштів на
             поточний рахунок Організації через установи банків на підставі даних Сайту (наприклад, оголошення про
@@ -266,11 +266,11 @@
             та засобів, розміщених на Сайті, або, незалежно від будь-яких дій Благодійника на Сайті, здійснення
             переказу через установу банку. Благодійна пожертва – грошові кошти, що перераховуються Організації на
             підставі цього Договору. Благодійник – дієздатна фізична або юридична особа, що здійснила Акцепт Оферти.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>2.Предмет договору:</h2>
-          <span class="pawn">
+          <p class="pawn">
             Предметом цього Договору є безоплатна і добровільна передача Благодійником у власність Організації
             грошових коштів, шляхом здійснення благодійної пожертви на здійснення статутної діяльності Організації.
             Благодійник самостійно визначає розмір благодійного пожертвування. Організація самостійно визначає напрями
@@ -290,7 +290,7 @@
             Благодійника на аналогічні цілі
             в рамках статутної діяльності Організації. На підставі ст.ст. 207, 639, 641, 642 Цивільного кодексу
             України,
-            з моменту Акцепту цей Договір вважається укладеним у письмовій формі. </span>
+            з моменту Акцепту цей Договір вважається укладеним у письмовій формі. </p>
         </li>
         <li class="public-offer-list-item">
           <h2>3.Права та обов’язки Організації.:</h2>
@@ -317,46 +317,46 @@
         </li>
         <li class="public-offer-list-item">
           <h2>5.Місце проведення публічного збору благодійних пожертв.</h2>
-          <span class="pawn">
+          <p class="pawn">
             Публічний збір благодійних пожертв проводиться на території будь-якої з країн світу. Безпосередня
             діяльність Організації, що стосується публічного збору пожертв за Договором, проводиться згідно його
             Статуту.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>6.Строк публічного збору благодійних пожертв.</h2>
-          <span class="pawn">
+          <p class="pawn">
             Публічний збір благодійних пожертв на підставі цього Договору здійснюється протягом всього строку
             діяльності Організації до моменту його припинення, якщо інше не визначено рішенням компетентних органів
             управління Організації. У випадках, передбачених п. 2 цього Договору, публічний збір благодійних пожертв
             проводиться протягом строків, вказаних у відповідному оголошенні про публічний збір благодійних пожертв на
             конкретну мету.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>7.Порядок використання благодійних пожертв.</h2>
-          <span class="pawn">
+          <p class="pawn">
             Використання зібраних за Договором благодійних пожертв проводиться у відповідності з метою, цілями,
             напрямами та завданнями діяльності Організації, визначеними у її Статуті, а у випадках, передбачених п. 4
             цього Договору, – визначеними у відповідному оголошенні про публічний збір благодійних пожертв на
             конкретну мету. Отримані Організацією благодійні пожертви можуть бути повернуті Благодійникові у випадках,
             передбачених законодавством України.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>8.Відповідальність Організації.</h2>
-          <span class="pawn">
+          <p class="pawn">
             Відповідальність Організації за порушення цього Договору або порядку використання благодійних пожертв
             наступає на підставах, в розмірі та в порядку, визначених вимогами чинного законодавства України.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>9.Звітність про використання благодійних пожертв.</h2>
-          <span class="pawn">
+          <p class="pawn">
             Доступ до звітів про використання благодійних пожертв надається Організацією у порядку і в строки,
             передбачені чинним законодавством України. Організація може оприлюднювати звітність про використання
             благодійних пожертв на Сайті.
-          </span>
+          </p>
         </li>
         <li class="public-offer-list-item">
           <h2>10.Прикінцеві положення.</h2>
