add styles with contacts-form and fix

--- a/blog.html
+++ b/blog.html
@@ -272,7 +272,7 @@
               <img src="./src/img/blog-2.jpg" alt="">
             </a>
             <div class="blog-card-wrap">
-              <a class="blog-projects-card-link" href="">
+              <a class="blog-projects-card-link" href="./blog-project#1">
                 <h3 class="blog-card-wrap__title">
                   Допомога народу України
                 </h3>
