--- a/contacts.html
+++ b/contacts.html
@@ -294,65 +294,62 @@
       </div>
     </section>
 
-    <section class="comments">
+    <section class="contacts-form content-bg">
       <div class="container">
-        <h1 class="comments__title">Напишіть нам</h1>
-        <div class="comments-info">
-          <p class="comments-info__descr">*Обов’язкові до заповнення поля.</p>
+        <div class="contacts-info">
+          <h1 class="contacts__title">Напишіть нам</h1>
+          <p class="contacts-info__descr">*Обов’язкові до заповнення поля.</p>
         </div>
 
-        <div class="content-bg">
-          <form action="#" method="post" class="form">
-            <div class="comments-wrap">
-              <div class="wrap-label-name">
-                <label for="name">Ім’я*</label>
-                <input type="text" id="name" name="name" placeholder="Як до Вас звертатись" required>
-              </div>
-              <div class="wrap-label-email">
-                <label for="tel">Номер телефону*</label>
-                <input type="tel" id="tel" name="tel" placeholder="+ 380 __ - ___ - __ - __" required>
-              </div>
+
+        <form action="#" method="post" class="form">
+          <div class="contacts-wrap">
+            <div class="wrap-label-name">
+              <label for="name">Ім’я*</label>
+              <input type="text" id="name" name="name" placeholder="Як до Вас звертатись" required>
             </div>
-
-            <div class="wrap-label-select">
-              <label for="topic">Тема звернення*</label>
-              <select id="topic" name="topic">
-                <option value="" disabled selected>Оберіть тему</option>
-                <option value="general">Загальна інформація</option>
-                <option value="support">Технічна підтримка</option>
-                <option value="feedback">Зворотний зв'язок</option>
-                <option value="other">Інше</option>
-              </select>
-
+            <div class="wrap-label-email">
+              <label for="tel">Номер телефону*</label>
+              <input type="tel" id="tel" name="tel" placeholder="+ 380 __ - ___ - __ - __" required>
             </div>
+          </div>
 
-            <div class="wrap-label-comments">
-              <label for="comment">Ваше повідомлення*</label>
-              <textarea id="comment" name="comment" rows="4"
-                placeholder="Напишіть Ваше повідомлення в цьому полі"></textarea>
-            </div>
+          <div class="wrap-label-select">
+            <label for="topic">Тема звернення*</label>
+            <select id="topic" name="topic">
+              <option value="" disabled selected>Оберіть тему</option>
+              <option value="general">Загальна інформація</option>
+              <option value="support">Технічна підтримка</option>
+              <option value="feedback">Зворотний зв'язок</option>
+              <option value="other">Інше</option>
+            </select>
+          </div>
 
 
+          <div class="wrap-label-contacts">
+            <label for="comment">Ваше повідомлення*</label>
+            <textarea id="comment" name="comment" rows="4"
+              placeholder="Напишіть Ваше повідомлення в цьому полі"></textarea>
+          </div>
 
-            <div class="wrap-label-communication">
+          <div class="wrap-label-communication">
 
-              <label>Оберіть бажаний спосіб зв’язку*</label>
-              <input type="radio" id="telegram" name="communicationMethod" value="telegram">
-              <label for="telegram">Telegram</label>
+            <label class="wrap-label-communication__title">Оберіть бажаний спосіб зв’язку*</label>
+            <input type="radio" id="telegram" name="communicationMethod" value="telegram">
+            <label for="telegram">Telegram</label>
 
-              <input type="radio" id="viber" name="communicationMethod" value="viber">
-              <label for="viber">Viber</label>
+            <input type="radio" id="viber" name="communicationMethod" value="viber">
+            <label for="viber">Viber</label>
 
-              <input type="radio" id="signal" name="communicationMethod" value="signal">
-              <label for="signal">Signal</label>
+            <input type="radio" id="signal" name="communicationMethod" value="signal">
+            <label for="signal">Signal</label>
 
-            </div>
+          </div>
 
-            <div class="wrap-comments-btn">
-              <button class="btn" type="submit">Надіслати повідомлення</button>
-            </div>
-          </form>
-        </div>
+          <div class="wrap-contacts-btn">
+            <button class="btn" type="submit">Надіслати повідомлення</button>
+          </div>
+        </form>
 
       </div>
     </section>
