--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <header id="header" class="header">
     <div class="content">
       <div class="logo">
-        <a class="logo-link" href="/">
+        <a class="logo-link" href="./index.html">
           <img src="./src/img/logo.png" alt="logo">
 
           <span>
@@ -88,7 +88,7 @@
       </div>
 
       <nav class="nav">
-        <a class="nav__link" href="./index.html">Головна</a>
+        <a class="nav__link current" href="./index.html">Головна</a>
         <a class="nav__link" href="./im-Ukranian.html">Я Українка</a>
         <a class="nav__link" href="./blog.html">Блог</a>
         <a class="nav__link" href="./contacts.html">Контакти</a>
@@ -284,39 +284,45 @@
       </p>
       <ul class="our-initiatives-list">
         <li class="our-initiatives-list__item">
-          <img src="./src/img/ou1.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Українське сонце”
-            </h3>
-            <p class="our-initiatives-card__descr">Проводимо роботу з дітьми
-              та підлітками від 3 до 14 років, навчаємо
-              як надавати першу медичну допомогу, організовуємо патріотичний рух молоді.</p>
-          </div>
+          <a href="./blog.html" class="our-initiatives-list__item-link">
+            <img src="./src/img/ou1.jpg" alt="">
+            <div class="our-initiatives-card">
+              <h3 class="our-initiatives-card__title">
+                Проєкт “Українське сонце”
+              </h3>
+              <p class="our-initiatives-card__descr">Проводимо роботу з дітьми
+                та підлітками від 3 до 14 років, навчаємо
+                як надавати першу медичну допомогу, організовуємо патріотичний рух молоді.</p>
+            </div>
+          </a>
         </li>
         <li class="our-initiatives-list__item">
-          <img src="./src/img/ou2.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Проєкт “Я Українка”
-            </h3>
-            <p class="our-initiatives-card__descr"> Це один з наших головних культурних проектів. Ми проводимо
-              патріотичні та культурні заходи в рамках Всеукраїнського фестивалю “Я Українка!” </p>
-          </div>
+          <a href="./blog.html" class="our-initiatives-list__item-link">
+            <img src="./src/img/ou2.jpg" alt="">
+            <div class="our-initiatives-card">
+              <h3 class="our-initiatives-card__title">
+                Проєкт “Я Українка”
+              </h3>
+              <p class="our-initiatives-card__descr"> Це один з наших головних культурних проектів. Ми проводимо
+                патріотичні та культурні заходи в рамках Всеукраїнського фестивалю “Я Українка!” </p>
+            </div>
+          </a>
         </li>
         <li class="our-initiatives-list__item">
-          <img src="./src/img/ou3.jpg" alt="">
-          <div class="our-initiatives-card">
-            <h3 class="our-initiatives-card__title">
-              Допомога народу України
-            </h3>
-            <p class="our-initiatives-card__descr">Ми надаємо юридичні послуги, допомога з реабілітації поранених,
-              допомога по господарству, психологічна
-              допомога.</p>
-          </div>
+          <a href="./blog.html" class="our-initiatives-list__item-link">
+            <img src="./src/img/ou3.jpg" alt="">
+            <div class="our-initiatives-card">
+              <h3 class="our-initiatives-card__title">
+                Допомога народу України
+              </h3>
+              <p class="our-initiatives-card__descr">Ми надаємо юридичні послуги, допомога з реабілітації поранених,
+                допомога по господарству, психологічна
+                допомога.</p>
+            </div>
+          </a>
         </li>
       </ul>
-      <a class="btn btn-all-projects" href="#">Всі проєкти</a>
+      <a class="btn btn-all-projects" href="./blog.html">Всі проєкти</a>
     </section>
 
     <section class="quotes container">
