--- a/public-offer.html
+++ b/public-offer.html
@@ -79,10 +79,10 @@
         <a class="logo-link" href="/">
           <img src="./src/img/logo.png" alt="logo">
 
-          <p>
+          <span>
             <h3 class="logo-title">Громадська організація</h3>
             <h2 class="logo-subtitle">Шлях до Здоровʼя</h2>
-          </p>
+          </span>
         </a>
 
       </div>
@@ -94,7 +94,7 @@
         <a class="nav__link" href="./contacts.html">Контакти</a>
         <a class="nav__link" href="./about-us.html">Про нас</a>
         <a class="nav__link" href="./autobiography.html">Автобіографія</a>
-        <a class="nav__link" href="./public-offer.html">Публічна офферта</a>
+        <a class="nav__link current" href="./public-offer.html">Публічна офферта</a>
       </nav>
 
       <div class="lang">
